--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -125,3 +125,17 @@ body {
     font-weight: 400px;
     margin-top: auto;
 }
+
+@media (min-width: 480px) and (max-width: 1200px){
+    .header{
+        padding: 10%;
+    }
+    
+    .presentacion{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .presentacion_texto{
+        width: auto;
+    }
+}
