--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -50,9 +50,11 @@ body {
     
 }
 .goats{
-    position:absolute;
+    position:relative;
     top: 200px; 
-    right: 70px; 
+    right: 70px;
+    
+     
    
 }
 .presentacion{
@@ -130,7 +132,10 @@ body {
     .header{
         padding: 10%;
     }
-    
+    .goats{
+        flex-direction: column-reverse;
+        width: auto;
+    }
     .presentacion{
         flex-direction: column-reverse;
         padding: 5%;
